# chickenhat-bot

./: .gitignore  Dockerfile  README.md  chickenhat-bot.code-workspace  docker-compose.yml  pyproject.toml  setup.py
chickenhat_bot/: auth.py  pubsub.py
src/chickenhat_bot/: auth.py  eventsub.py  pubsub.py
